Fix typo in alpha

--- a/alpha.html
+++ b/alpha.html
@@ -70,7 +70,7 @@
                     </ul>
                 </li>
                 <li id="loops-modes">Loops & Modes: 
-                    <div class="normal-content">On-Hover, Off-Hover, On-Click</div>
+                    <div class="normal-content">There are no loops and modes</div>
                 </li>
             </ul>
         </div>
