update beta description

--- a/beta/beta.html
+++ b/beta/beta.html
@@ -24,13 +24,13 @@
             <ol class="primary-list">
                 <li>On Hover
                     <ol class="secondary-list">
-                        <li>Add to bag button:
+                        <li>Add to cart button:
                             <ul class="tertiary-list">
                                 <li>Background color changes to #004236</li>
                                 <li>Text color changes #FFFFFF</li>
                                 <li>Border disappears</li>
-                                <li>Add to bag text moves slightly to the right</li>
-                                <li>A down arrow fades in, shrinks in size, and settles on the right of Add to bag text</li>
+                                <li>Add to cart text moves slightly to the right</li>
+                                <li>A cart icon fades in, shrinks in size, and settles on the right of Add to cart text</li>
                             </ul>
                         </li>
 
@@ -40,13 +40,13 @@
 
                 <li>Off Hover
                     <ol class="secondary-list">
-                        <li>Add to bag button:
+                        <li>Add to cart button:
                             <ul class="tertiary-list">
                                 <li>Background color changes to #FFFFFF</li>
                                 <li>Text color changes #004236</li>
-                                <li>A #004236 border appears around Add to bag button</li>
-                                <li>Add to bag text moves back to the center</li>
-                                <li>Down arrow disappears</li>
+                                <li>A #004236 border appears around Add to cart button</li>
+                                <li>Add to cart text moves back to the center</li>
+                                <li>Cart icon disappears</li>
                             </ul>
                         </li>
 
@@ -56,8 +56,8 @@
                 
                 <li>On Click
                     <ol class="secondary-list">
-                        <li>Add to bag button: A menu fades in and drops down, revealing the numbers of items can be added to bag</li>
-                        <li>Anywhere outside Add to bag button and dropdown menu: Dropdown menu disappear</li>
+                        <li>Add to cart button: A menu fades in and drops down, revealing the numbers of items can be added to cart</li>
+                        <li>Anywhere outside Add to cart button and dropdown menu: Dropdown menu disappear</li>
                     </ol>
                 </li>
             </ol>
@@ -68,13 +68,13 @@
             <ol class="primary-list">
                 <li>On Hover
                     <ol class="secondary-list">
-                        <li>Add to bag button:
+                        <li>Add to cart button:
                             <ul class="tertiary-list">
                                 <li>Background color changes to #004236</li>
                                 <li>Text color changes #FFFFFF</li>
                                 <li>Border disappears</li>
-                                <li>Add to bag text moves slightly to the right</li>
-                                <li>A down arrow fades in, shrinks in size, and settles on the right of Add to bag text</li>
+                                <li>Add to cart text moves slightly to the right</li>
+                                <li>A cart icon fades in, shrinks in size, and settles on the right of Add to cart text</li>
                             </ul>
                         </li>
 
@@ -84,13 +84,13 @@
 
                 <li>Off Hover
                     <ol class="secondary-list">
-                        <li>Add to bag button:
+                        <li>Add to cart button:
                             <ul class="tertiary-list">
                                 <li>Background color changes to #FFFFFF</li>
                                 <li>Text color changes #004236</li>
-                                <li>A #004236 border appears around Add to bag button</li>
-                                <li>Add to bag text moves back to the center</li>
-                                <li>Down arrow disappears</li>
+                                <li>A #004236 border appears around Add to cart button</li>
+                                <li>Add to cart text moves back to the center</li>
+                                <li>Cart icon disappears</li>
                             </ul>
                         </li>
 
@@ -100,8 +100,8 @@
                 
                 <li>On Click
                     <ol class="secondary-list">
-                        <li>Add to bag button: A menu fades in and drops down, revealing the numbers of items can be added to bag</li>
-                        <li>Anywhere outside Add to bag button and dropdown menu: Dropdown menu disappear</li>
+                        <li>Add to cart button: A menu fades in and drops down, revealing the numbers of items can be added to cart</li>
+                        <li>Anywhere outside Add to cart button and dropdown menu: Dropdown menu disappear</li>
                     </ol>
                 </li>
             </ol>
@@ -109,7 +109,7 @@
 
         <div id="loops-modes">
             <h2>Loops & Modes</h2>
-            <p>A dropdown menu appears by clicking on Add to bag button, revealing the numbers of items can be added to bag</p>
+            <p>A dropdown menu appears by clicking on Add to cart button, revealing the numbers of items can be added to cart</p>
         </div>
     </div>
 </body>
