fix typo beta description

--- a/beta/beta.html
+++ b/beta/beta.html
@@ -29,7 +29,7 @@
                                 <li>Background color changes to #004236</li>
                                 <li>Text color changes #FFFFFF</li>
                                 <li>Border disappears</li>
-                                <li>Add to cart text moves slightly to the right</li>
+                                <li>Add to cart text moves slightly to the left</li>
                                 <li>A cart icon fades in, shrinks in size, and settles on the right of Add to cart text</li>
                             </ul>
                         </li>
@@ -73,7 +73,7 @@
                                 <li>Background color changes to #004236</li>
                                 <li>Text color changes #FFFFFF</li>
                                 <li>Border disappears</li>
-                                <li>Add to cart text moves slightly to the right</li>
+                                <li>Add to cart text moves slightly to the left</li>
                                 <li>A cart icon fades in, shrinks in size, and settles on the right of Add to cart text</li>
                             </ul>
                         </li>
@@ -109,7 +109,7 @@
 
         <div id="loops-modes">
             <h2>Loops & Modes</h2>
-            <p>A dropdown menu appears by clicking on Add to cart button, revealing the numbers of items can be added to cart</p>
+            <p>Mode: A dropdown menu appears by clicking on Add to cart button, revealing the numbers of items can be added to cart</p>
         </div>
     </div>
 </body>
